// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev should fail if an invalid port is passed 1`] = `
Array [
  Array [
    [Error: The port number specified is not valid: not-valid-port.],
  ],
]
`;

exports[`dev should fail if an invalid target is passed 1`] = `
Array [
  Array [
    [Error: The target specified is invalid: "not-valid-target". Use either "module" or "es5".],
  ],
]
`;

exports[`dev should get values from ENV variables 1`] = `
Array [
  Array [
    Object {
      "dontOpenBrowser": true,
      "https": true,
      "port": 3001,
      "production": true,
      "publicPath": "/public/path",
      "target": "es5",
    },
  ],
]
`;

exports[`dev should ignore ENV variables for passed arguments 1`] = `
Array [
  Array [
    Object {
      "dontOpenBrowser": false,
      "https": false,
      "port": 4000,
      "production": false,
      "publicPath": "/static",
      "target": "module",
    },
  ],
]
`;

exports[`dev should receive default values 1`] = `
Array [
  Array [
    Object {
      "dontOpenBrowser": false,
      "https": false,
      "port": 3000,
      "production": false,
      "publicPath": undefined,
      "target": undefined,
    },
  ],
]
`;
